# tutorials

./: README.md
analysis/: CMakeLists.txt  INSTALL.sh  README.md
analysis/cmake/Modules/: FindAraEvent.cmake
analysis/cmake_style/: .gitignore  CMakeLists.txt  INSTALL.sh  README.md
analysis/cmake_style/cmake/Modules/: FindAraEvent.cmake
analysis/make_style/: Makefile  README.md  exampleAnalysis.cpp
analysis/python_style/: PyAraRoot_getWF.py
bootcamps/bootcamp_2020/: Makefile  exercise1.cpp  exercise1.py  exercise2.cpp  exercise2.py  plot_sim.cpp
bootcamps/bootcamp_2020/solutions/: exercise1.C  exercise1_solution.cpp  exercise1_solution.py  exercise2_solution.cpp  exercise2_solution.py  exercise3_solution.cpp
simulation/: README.md
simulation/analyze_sims/python_style/: pyAnalyze_sim.py
simulation/calculate_aeff/: Makefile  calc_aeff.cpp  env.sh
simulation/generate_arasim/: README.md  inputFileFromAraSim.py
simulation/generate_arasim/htcondor_version/: README.md  job.sh  job.sub  sample_setup.txt  submit.sh
